Bug 444737 - Using "mousewheel scroll" for continuous titlebar actions is too fast on Wayland
Summary: Using "mousewheel scroll" for continuous titlebar actions is too fast on Wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.22.5
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-31 19:49 UTC by berkant
Modified: 2023-01-18 21:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description berkant 2021-10-31 19:49:56 UTC
Issue can be seen either while using mouse, or trackpad. However, while using trackpad's two fingers scrolling it is more severe.

Example can be seen here:
https://i.imgur.com/1Fsa4Kc.gif

Screen recorder didn't capture my cursor, but cursor is actually on titlebar.

STEPS TO REPRODUCE
1. Set "Window Management > Window Behavior > Titlebar Actions > Mouse wheel" to "Move to previous/next desktop"
2. Hover your cursor on titlebar of a window, scroll
3. Desktop switches too fast, it is unusable/untrackable.

SOFTWARE/OS VERSIONS
Manjaro KDE / 5.14.10-1-MANJARO
Graphics Platform: Wayland
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2

EXPECTED RESULT
When mousewheel is triggered on window titlebar, move the window to the next desktop; stop recognizing the gesture for a little then start recognizing again.
Or; scrolling on pager plasmoid widget and changing desktops that way is quite usable. It can be like that.

ADDITIONAL INFORMATION
I am using jafd's libinput fork for three finger drag support for trackpad.
https://github.com/jafd/xorg-xf86-input-libinput
I am not sure if this causes the problem because I can reproduce the bug with an external mouse. Yet as I said, with trackpad, it is more severe.

There is similar problem if you set your Titlebar Action: Mousewheel to Change opacity. I think problem is about continuous actions.
Comment 1 berkant 2021-10-31 20:09:27 UTC
Edit: I cannot reproduce this issue while using Xorg. So it seems like a Wayland specific issue. Moving report to (hopefully) right component.
Comment 2 Nate Graham 2021-11-01 17:01:29 UTC
Can confirm.
Comment 3 Patrick Silva 2022-10-29 20:40:20 UTC
Still an issue.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 4 Zamundaaa 2023-01-18 18:46:21 UTC
Git commit 52b4ee3338c185787ee9a0f03c5befd117c0de3a by Xaver Hugl.
Committed on 18/01/2023 at 13:14.
Pushed by zamundaaa into branch 'master'.

input: don't trigger titlebar actions on every event with a touchpad

Instead, accumulate the values and only trigger an action when the user
has scrolled far enough

M  +27   -3    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/52b4ee3338c185787ee9a0f03c5befd117c0de3a