input: don't trigger titlebar actions on every event with a touchpad

Instead, accumulate the values and only trigger an action when the user
has scrolled far enough

BUG: 444737